update by adding new files

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <li>List Item 3</li>
   </ul>
 
-  <img id="sampleImage" src="https://via.placeholder.com/100" alt="Sample">
+  <img id="sampleImage" src="https://placehold.co/100x100" alt="Sample">
 
   <div id="output"></div>
 
